k8s/tezblock/carthagenet/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tezblock-carthagenet-frontend
  namespace: tezblock
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    certmanager.k8s.io/cluster-issuer: 'letsencrypt-prod'
    certmanager.k8s.io/acme-challenge-type: http01
spec:
  tls:
    - hosts:
        - tezblock-carthagenet.prod.gke.papers.tech
        - carthagenet.tezblock.io
      secretName: tezblock-carthagenet-prod-tls  
  rules:
    - host: tezblock-carthagenet.prod.gke.papers.tech
      http:
        paths:
          - backend:
              serviceName: tezblock-carthagenet-frontend
              servicePort: 80
    - host: carthagenet.tezblock.io
      http:
        paths:
          - backend:
              serviceName: tezblock-carthagenet-frontend
              servicePort: 80
